refractor the codebase